--- a/.github/workflows/x86.yml
+++ b/.github/workflows/x86.yml
@@ -105,7 +105,7 @@ jobs:
       run: |
         cd openwrt
         echo -e "$(nproc) thread compile"
-        make -j$(nproc) V=s || make -j1 V=s
+        make -j1 V=s
         echo "::set-output name=status::success"
 
     - name: Upload bin directory
